force-app/main/default/objects/Trigger_Settings__mdt/Trigger_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata to toggle triggers and set recursion control</description>
    <label>Trigger Settings</label>
    <pluralLabel>Trigger Settings</pluralLabel>
</CustomObject>