force-app/main/default/objects/Trigger_Settings__mdt/fields/Max_Loop_Count__c.field-meta.xml
<CustomField>
    <fullName>Max_Loop_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Field to control the maximum times a trigger can recurse in any given context.</description>
    <label>Max Loop Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>