force-app/main/default/objects/Trigger_Settings__mdt/fields/Recursion_Check__c.field-meta.xml
<CustomField>
    <fullName>Recursion_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This boolean is used to enable or disable recursion control in the trigger framework</description>
    <label>Recursion Check</label>
    <type>Checkbox</type>
</CustomField>